# bulkbrowser

./: .firebaserc  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
.firebase/: hosting.LmZpcmViYXNlL2J1bGstOTE2NmQvaG9zdGluZw.cache
.firebase/bulk-9166d/functions/: index.js  manifest-full.js  manifest.js  package-lock.json  package.json  server.js
.firebase/bulk-9166d/functions/chunks/: internal.js  ssr.js
.firebase/bulk-9166d/functions/entries/pages/: _page.svelte.js
.firebase/bulk-9166d/functions/nodes/: 0.js  1.js  2.js
.firebase/bulk-9166d/hosting/_app/: version.json
.firebase/bulk-9166d/hosting/_app/immutable/assets/: 2.3ab6617e.css
.firebase/bulk-9166d/hosting/_app/immutable/chunks/: index.56af74da.js  scheduler.430fa0b3.js  singletons.42f8cf59.js
.firebase/bulk-9166d/hosting/_app/immutable/entry/: app.4d8658b8.js  start.d3e67b45.js
backend/: bins.json
backend/data.ms/: instance-uid
backend/data.ms/auth/: data.mdb  lock.mdb
backend/data.ms/indexes/34ce7568-d890-43bf-b358-28f1a9353ef3/: data.mdb  lock.mdb
backend/data.ms/tasks/: data.mdb  lock.mdb
backend/src/: db.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  svelte.config.js  tailwind.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/src/: index.js
frontend/src/lib/: barcode.svelte  data.ts  items.svelte
server/: Cargo.toml  bins.json
server/src/: db.rs  main.rs
src/: app.css
src/lib/: barcode.svelte  bins.ts  bottom.svelte  data.ts  items.svelte
src/routes/: +page.svelte
(+3 files in other folders)
