[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.19.0"
meilisearch-sdk = "0.25.0"
futures = "0.3"
serde = { version="1.0",   features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

